@@ -10,12 +10,13 @@ import androidx.lifecycle.Transformations;
 import androidx.lifecycle.ViewModel;
 import androidx.lifecycle.ViewModelProvider;
 
-import com.annimon.stream.Collectors;
-import com.annimon.stream.Stream;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.thoughtcrime.securesms.groups.ui.GroupMemberEntry;
 import org.thoughtcrime.securesms.keyvalue.SignalStore;
-import org.thoughtcrime.securesms.mediasend.Media;
+import org.signal.core.models.media.Media;
+import org.thoughtcrime.securesms.recipients.Recipient;
 import org.thoughtcrime.securesms.recipients.RecipientId;
 import org.thoughtcrime.securesms.util.DefaultValueLiveData;
 import org.thoughtcrime.securesms.util.SingleLiveEvent;
@@ -38,6 +39,7 @@ public final class AddGroupDetailsViewModel extends ViewModel {
   private final MutableLiveData<Integer>                           disappearingMessagesTimer = new MutableLiveData<>(SignalStore.settings().getUniversalExpireTimer());
   private final LiveData<Boolean>                                  isMms;
   private final LiveData<Boolean>                                  canSubmitForm;
+  private final LiveData<List<Recipient>>                           sameGroups;
   private final AddGroupDetailsRepository                          repository;
 
   private Media avatarMedia;
@@ -53,6 +55,16 @@ public final class AddGroupDetailsViewModel extends ViewModel {
     members       = LiveDataUtil.combineLatest(initialMembers, deleted, AddGroupDetailsViewModel::filterDeletedMembers);
     isMms         = Transformations.map(members, AddGroupDetailsViewModel::isAnyForcedSms);
     canSubmitForm = LiveDataUtil.combineLatest(isMms, isValidName, (mms, validName) -> mms || validName);
+    sameGroups    = Transformations.switchMap(members, memberList -> {
+      MutableLiveData<List<Recipient>> result = new MutableLiveData<>(Collections.emptyList());
+      if (!memberList.isEmpty()) {
+        Set<RecipientId> memberIds = memberList.stream()
+                                          .map(member -> member.getMember().getId())
+                                          .collect(Collectors.toSet());
+        repository.getGroupsWithSameMembers(memberIds, result::postValue);
+      }
+      return result;
+    });
 
     repository.resolveMembers(recipientIds, initialMembers::postValue);
   }
@@ -75,6 +87,10 @@ public final class AddGroupDetailsViewModel extends ViewModel {
 
   @NonNull LiveData<Boolean> getIsMms() {
     return isMms;
+  }
+
+  @NonNull LiveData<List<Recipient>> getSameGroups() {
+    return sameGroups;
   }
 
   @NonNull LiveData<Integer> getDisappearingMessagesTimer() {
@@ -102,7 +118,7 @@ public final class AddGroupDetailsViewModel extends ViewModel {
 
   void create() {
     List<GroupMemberEntry.NewGroupCandidate> members           = Objects.requireNonNull(this.members.getValue());
-    Set<RecipientId>                         memberIds         = Stream.of(members).map(member -> member.getMember().getId()).collect(Collectors.toSet());
+    Set<RecipientId>                         memberIds         = members.stream().map(member -> member.getMember().getId()).collect(Collectors.toSet());
     byte[]                                   avatarBytes       = avatar.getValue();
     String                                   groupName         = name.getValue();
     Integer                                  disappearingTimer = disappearingMessagesTimer.getValue();
@@ -120,13 +136,13 @@ public final class AddGroupDetailsViewModel extends ViewModel {
   }
 
   private static @NonNull List<GroupMemberEntry.NewGroupCandidate> filterDeletedMembers(@NonNull List<GroupMemberEntry.NewGroupCandidate> members, @NonNull Set<RecipientId> deleted) {
-    return Stream.of(members)
-                 .filterNot(member -> deleted.contains(member.getMember().getId()))
-                 .toList();
+    return members.stream()
+                 .filter(member -> !deleted.contains(member.getMember().getId()))
+                 .collect(Collectors.toList());
   }
 
   private static boolean isAnyForcedSms(@NonNull List<GroupMemberEntry.NewGroupCandidate> members) {
-    return Stream.of(members)
+    return members.stream()
                  .anyMatch(member -> !member.getMember().isRegistered());
   }
 
