@@ -4,14 +4,13 @@ import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.annotation.WorkerThread;
 
-import com.annimon.stream.Stream;
-
 import org.signal.core.util.logging.Log;
 import org.thoughtcrime.securesms.database.SignalDatabase;
 import org.thoughtcrime.securesms.jobmanager.Job;
 import org.thoughtcrime.securesms.jobmanager.JsonJobData;
 import org.thoughtcrime.securesms.jobmanager.impl.DecryptionsDrainedConstraint;
 import org.thoughtcrime.securesms.jobmanager.impl.NetworkConstraint;
+import org.thoughtcrime.securesms.jobmanager.impl.SealedSenderConstraint;
 import org.thoughtcrime.securesms.messages.GroupSendUtil;
 import org.thoughtcrime.securesms.net.NotPushRegisteredException;
 import org.thoughtcrime.securesms.ratelimit.ProofRequiredExceptionHandler;
@@ -29,6 +28,8 @@ import org.whispersystems.signalservice.api.push.exceptions.ServerRejectedExcept
 import java.io.IOException;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class ProfileKeySendJob extends BaseJob {
 
@@ -48,12 +49,26 @@ public class ProfileKeySendJob extends BaseJob {
             .setMaxInstancesForQueue(Parameters.UNLIMITED)
             .addConstraint(NetworkConstraint.KEY)
             .addConstraint(DecryptionsDrainedConstraint.KEY)
+            .addConstraint(SealedSenderConstraint.KEY)
             .setLifespan(TimeUnit.DAYS.toMillis(1))
             .setMaxAttempts(Parameters.UNLIMITED)
             .build(),
         -1L,
         recipientIds
     );
+  }
+
+  /**
+   * Suitable for a 1:1 conversation or a GV1 group only.
+   *
+   * @param queueLimits True if you only want one of these to be run per person after decryptions
+   *                    are drained, otherwise false.
+   *
+   * @return The job that is created, or null if the threadId provided was invalid.
+   */
+  @WorkerThread
+  public static @Nullable ProfileKeySendJob create(@NonNull Recipient recipient, boolean queueLimits) {
+    return create(SignalDatabase.threads().getOrCreateThreadIdFor(recipient), queueLimits);
   }
 
   /**
@@ -77,11 +92,11 @@ public class ProfileKeySendJob extends BaseJob {
       throw new AssertionError("Do not send profile keys directly for GV2");
     }
 
-    List<RecipientId> recipients = conversationRecipient.isGroup() ? Stream.of(RecipientUtil.getEligibleForSending(Recipient.resolvedList(conversationRecipient.getParticipantIds())))
-                                                                           .map(Recipient::getId)
-                                                                           .toList()
-                                                                   : Stream.of(conversationRecipient.getId())
-                                                                           .toList();
+    List<RecipientId> recipients = conversationRecipient.isGroup()
+                                   ? RecipientUtil.getEligibleForSending(Recipient.resolvedList(conversationRecipient.getParticipantIds()))
+                                                  .stream()
+                                                  .map(Recipient::getId).collect(Collectors.toList())
+                                                                   : Stream.of(conversationRecipient.getId()).collect(Collectors.toList());
 
     recipients.remove(Recipient.self().getId());
 
@@ -91,6 +106,7 @@ public class ProfileKeySendJob extends BaseJob {
                                                  .setMaxInstancesForQueue(1)
                                                  .addConstraint(NetworkConstraint.KEY)
                                                  .addConstraint(DecryptionsDrainedConstraint.KEY)
+                                                 .addConstraint(SealedSenderConstraint.KEY)
                                                  .setLifespan(TimeUnit.DAYS.toMillis(1))
                                                  .setMaxAttempts(Parameters.UNLIMITED)
                                                  .build(), threadId, recipients);
@@ -98,6 +114,7 @@ public class ProfileKeySendJob extends BaseJob {
       return new ProfileKeySendJob(new Parameters.Builder()
                                                  .setQueue(conversationRecipient.getId().toQueueKey())
                                                  .addConstraint(NetworkConstraint.KEY)
+                                                 .addConstraint(SealedSenderConstraint.KEY)
                                                  .setLifespan(TimeUnit.DAYS.toMillis(1))
                                                  .setMaxAttempts(Parameters.UNLIMITED)
                                                  .build(), threadId, recipients);
@@ -125,7 +142,7 @@ public class ProfileKeySendJob extends BaseJob {
       }
     }
 
-    List<Recipient> destinations = Stream.of(recipients).map(Recipient::resolved).toList();
+    List<Recipient> destinations = recipients.stream().map(Recipient::resolved).collect(Collectors.toList());
     List<Recipient> completions  = deliver(destinations);
 
     for (Recipient completion : completions) {
@@ -146,6 +163,11 @@ public class ProfileKeySendJob extends BaseJob {
     if (e instanceof NotPushRegisteredException) return false;
     return e instanceof IOException ||
            e instanceof RetryLaterException;
+  }
+
+  @Override
+  public long getNextRunAttemptBackoff(int pastAttemptCount, @NonNull Exception exception) {
+    return SendJobUtil.getBackoffMillisFromException(this, TAG, pastAttemptCount, exception, () -> super.getNextRunAttemptBackoff(pastAttemptCount, exception));
   }
 
   @Override
@@ -172,8 +194,8 @@ public class ProfileKeySendJob extends BaseJob {
                                                                            .withTimestamp(System.currentTimeMillis())
                                                                            .withProfileKey(Recipient.self().resolve().getProfileKey());
 
-    List<SendMessageResult>    results       = GroupSendUtil.sendUnresendableDataMessage(context, null, destinations, false, ContentHint.IMPLICIT, dataMessage.build(), false);
-    ProofRequiredException     proofRequired = Stream.of(results).filter(r -> r.getProofRequiredFailure() != null).findLast().map(SendMessageResult::getProofRequiredFailure).orElse(null);
+    List<SendMessageResult>    results       = GroupSendUtil.sendUnresendableDataMessage(context, null, destinations, false, ContentHint.IMPLICIT, dataMessage.build(), false, null);
+    ProofRequiredException     proofRequired = results.stream().filter(r -> r.getProofRequiredFailure() != null).reduce((a,b) -> b).map(SendMessageResult::getProofRequiredFailure).orElse(null);
 
     GroupSendJobHelper.SendResult groupResult = GroupSendJobHelper.getCompletedSends(destinations, results);
 
