@@ -3,7 +3,7 @@ package org.thoughtcrime.securesms.jobs;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
-import com.annimon.stream.Stream;
+import java.util.stream.Collectors;
 
 import org.signal.core.util.logging.Log;
 import org.thoughtcrime.securesms.database.GroupTable;
@@ -12,12 +12,12 @@ import org.thoughtcrime.securesms.groups.GroupId;
 import org.thoughtcrime.securesms.jobmanager.JsonJobData;
 import org.thoughtcrime.securesms.jobmanager.Job;
 import org.thoughtcrime.securesms.jobmanager.impl.NetworkConstraint;
+import org.thoughtcrime.securesms.jobmanager.impl.SealedSenderConstraint;
 import org.thoughtcrime.securesms.messages.GroupSendUtil;
 import org.thoughtcrime.securesms.net.NotPushRegisteredException;
 import org.thoughtcrime.securesms.recipients.Recipient;
 import org.thoughtcrime.securesms.recipients.RecipientUtil;
 import org.thoughtcrime.securesms.util.TextSecurePreferences;
-import org.whispersystems.signalservice.api.CancelationException;
 import org.whispersystems.signalservice.api.messages.SignalServiceTypingMessage;
 import org.whispersystems.signalservice.api.messages.SignalServiceTypingMessage.Action;
 
@@ -44,6 +44,7 @@ public class TypingSendJob extends BaseJob {
                            .setMaxAttempts(1)
                            .setLifespan(TimeUnit.SECONDS.toMillis(5))
                            .addConstraint(NetworkConstraint.KEY)
+                           .addConstraint(SealedSenderConstraint.KEY)
                            .setMemoryOnly(true)
                            .build(),
          threadId,
@@ -108,6 +109,11 @@ public class TypingSendJob extends BaseJob {
       return;
     }
 
+    if (recipient.isPushV2Group() && !SignalDatabase.groups().isActive(recipient.requireGroupId())) {
+      Log.w(TAG, "Not sending typing indicators to terminated or inactive groups.");
+      return;
+    }
+
     if (!recipient.isRegistered()) {
       Log.w(TAG, "Not sending typing indicators to non-Signal recipients.");
       return;
@@ -121,21 +127,16 @@ public class TypingSendJob extends BaseJob {
       groupId    = Optional.of(recipient.requireGroupId().getDecodedId());
     }
 
-    recipients = RecipientUtil.getEligibleForSending(Stream.of(recipients)
-                                                           .map(Recipient::resolve)
-                                                           .toList());
+    recipients = RecipientUtil.getEligibleForSending(recipients.stream()
+                                                               .map(Recipient::resolve).collect(Collectors.toList()));
 
     SignalServiceTypingMessage typingMessage = new SignalServiceTypingMessage(typing ? Action.STARTED : Action.STOPPED, System.currentTimeMillis(), groupId);
 
-    try {
-      GroupSendUtil.sendTypingMessage(context,
-                                      recipient.getGroupId().map(GroupId::requireV2).orElse(null),
-                                      recipients,
-                                      typingMessage,
-                                      this::isCanceled);
-    } catch (CancelationException e) {
-      Log.w(TAG, "Canceled during send!");
-    }
+    GroupSendUtil.sendTypingMessage(context,
+                                    recipient.getGroupId().map(GroupId::requireV2).orElse(null),
+                                    recipients,
+                                    typingMessage,
+                                    this::isCanceled);
   }
 
   @Override
