@@ -11,14 +11,16 @@ import androidx.annotation.Nullable;
 import androidx.annotation.WorkerThread;
 import androidx.core.app.NotificationManagerCompat;
 
-import com.annimon.stream.Stream;
 import com.bumptech.glide.Glide;
 
+import org.signal.core.util.DiskUtil;
 import org.signal.core.util.MapUtil;
 import org.signal.core.util.SetUtil;
 import org.signal.core.util.TranslationDetection;
 import org.signal.core.util.logging.Log;
 import org.thoughtcrime.securesms.R;
+import org.thoughtcrime.securesms.backup.v2.MessageBackupTier;
+import org.thoughtcrime.securesms.backup.v2.ui.BackupUpsellBottomSheet;
 import org.thoughtcrime.securesms.backup.v2.ui.verify.VerifyBackupKeyActivity;
 import org.thoughtcrime.securesms.components.settings.app.AppSettingsActivity;
 import org.thoughtcrime.securesms.database.SignalDatabase;
@@ -40,10 +42,12 @@ import org.thoughtcrime.securesms.profiles.manage.EditProfileActivity;
 import org.thoughtcrime.securesms.profiles.username.NewWaysToConnectDialogFragment;
 import org.thoughtcrime.securesms.recipients.Recipient;
 import org.thoughtcrime.securesms.storage.StorageSyncHelper;
+import org.signal.core.util.ByteUnit;
+import org.thoughtcrime.securesms.util.CommunicationActions;
 import org.thoughtcrime.securesms.util.DateUtils;
 import org.thoughtcrime.securesms.util.Environment;
 import org.thoughtcrime.securesms.util.RemoteConfig;
-import org.thoughtcrime.securesms.util.ServiceUtil;
+import org.signal.core.util.ServiceUtil;
 import org.thoughtcrime.securesms.util.TextSecurePreferences;
 import org.thoughtcrime.securesms.util.VersionTracker;
 import org.thoughtcrime.securesms.util.dynamiclanguage.DynamicLanguageContextWrapper;
@@ -55,6 +59,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 /**
  * Creating a new megaphone:
@@ -85,18 +90,17 @@ public final class Megaphones {
   static @Nullable Megaphone getNextMegaphone(@NonNull Context context, @NonNull Map<Event, MegaphoneRecord> records) {
     long currentTime = System.currentTimeMillis();
 
-    List<Megaphone> megaphones = Stream.of(buildDisplayOrder(context, records))
-                                       .filter(e -> {
-                                         MegaphoneRecord   record   = Objects.requireNonNull(records.get(e.getKey()));
-                                         MegaphoneSchedule schedule = e.getValue();
+    List<Megaphone> megaphones = buildDisplayOrder(context, records).entrySet().stream()
+                                                                    .filter(e -> {
+                                                                      MegaphoneRecord   record   = Objects.requireNonNull(records.get(e.getKey()));
+                                                                      MegaphoneSchedule schedule = e.getValue();
 
-                                         return !record.isFinished() && schedule.shouldDisplay(record.getSeenCount(), record.getLastSeen(), record.getFirstVisible(), currentTime);
-                                       })
-                                       .map(Map.Entry::getKey)
-                                       .map(records::get)
-                                       .map(record -> Megaphones.forRecord(context, record))
-                                       .filterNot(Objects::isNull)
-                                       .toList();
+                                                                      return !record.getFinished() && schedule.shouldDisplay(record.getInteractionCount(), record.getLastInteractionTime(), record.getFirstVisible(), currentTime);
+                                                                    })
+                                                                    .map(Map.Entry::getKey)
+                                                                    .map(records::get)
+                                                                    .map(record -> Megaphones.forRecord(context, record))
+                                                                    .filter(Objects::nonNull).collect(Collectors.toList());
 
     if (megaphones.size() > 0) {
       return megaphones.get(0);
@@ -115,26 +119,39 @@ public final class Megaphones {
     return new LinkedHashMap<>() {{
       put(Event.PINS_FOR_ALL, new PinsForAllSchedule());
       put(Event.CLIENT_DEPRECATED, SignalStore.misc().isClientDeprecated() ? ALWAYS : NEVER);
-      put(Event.NEW_LINKED_DEVICE, shouldShowNewLinkedDeviceMegaphone() ? ALWAYS: NEVER);
+      put(Event.NEW_LINKED_DEVICE, shouldShowNewLinkedDeviceMegaphone() ? ALWAYS : NEVER);
       put(Event.NOTIFICATIONS, shouldShowNotificationsMegaphone(context) ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(30)) : NEVER);
       put(Event.GRANT_FULL_SCREEN_INTENT, shouldShowGrantFullScreenIntentPermission(context) ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(3)) : NEVER);
       put(Event.BACKUP_SCHEDULE_PERMISSION, shouldShowBackupSchedulePermissionMegaphone(context) ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(3)) : NEVER);
       put(Event.ONBOARDING, shouldShowOnboardingMegaphone(context) ? ALWAYS : NEVER);
       put(Event.TURN_OFF_CENSORSHIP_CIRCUMVENTION, shouldShowTurnOffCircumventionMegaphone() ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(7)) : NEVER);
       put(Event.REMOTE_MEGAPHONE, shouldShowRemoteMegaphone(records) ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(1)) : NEVER);
-      put(Event.LINKED_DEVICE_INACTIVE, shouldShowLinkedDeviceInactiveMegaphone() ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(3)): NEVER);
+      put(Event.LINKED_DEVICE_INACTIVE, shouldShowLinkedDeviceInactiveMegaphone() ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(3)) : NEVER);
+
+      // Specifically putting backup reminders here, above PIN reminders
+      put(Event.BACKUP_LOW_STORAGE_UPSELL, shouldShowBackupLowStorageUpsell(context) ? new BackupUpsellSchedule(records, TimeUnit.DAYS.toMillis(60), TimeUnit.DAYS.toMillis(120)) : NEVER);
+      put(Event.BACKUP_MEDIA_SIZE_UPSELL, shouldShowBackupMediaSizeUpsell() ? new BackupUpsellSchedule(records, TimeUnit.DAYS.toMillis(60), TimeUnit.DAYS.toMillis(120)) : NEVER);
+      put(Event.BACKUP_MESSAGE_COUNT_UPSELL, shouldShowBackupMessageCountUpsell(context) ? new BackupUpsellSchedule(records, TimeUnit.DAYS.toMillis(60)) : NEVER);
+      put(Event.BACKUPS_GENERIC_UPSELL, shouldShowGenericBackupsMegaphone(context) ? new BackupUpsellSchedule(records, TimeUnit.DAYS.toMillis(60)) : NEVER);
+      put(Event.VERIFY_BACKUP_KEY, new VerifyBackupKeyReminderSchedule());
+      put(Event.USE_NEW_ON_DEVICE_BACKUPS, shouldShowUseNewOnDeviceBackupsMegaphone() ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(14)) : NEVER);
+
+      // The Great Wall of PIN Reminder -- megaphones below this may not be seen by users who never do reminders
       put(Event.PIN_REMINDER, new SignalPinReminderSchedule());
-      put(Event.SET_UP_YOUR_USERNAME, shouldShowSetUpYourUsernameMegaphone(records) ? ALWAYS : NEVER);
 
       // Feature-introduction megaphones should *probably* be added below this divider
+      put(Event.SET_UP_YOUR_USERNAME, shouldShowSetUpYourUsernameMegaphone(records) ? ALWAYS : NEVER);
       put(Event.ADD_A_PROFILE_PHOTO, shouldShowAddAProfilePhotoMegaphone(context) ? ALWAYS : NEVER);
       put(Event.PNP_LAUNCH, shouldShowPnpLaunchMegaphone() ? ALWAYS : NEVER);
-      put(Event.TURN_ON_SIGNAL_BACKUPS, shouldShowTurnOnBackupsMegaphone(context) ? new RecurringSchedule(TimeUnit.DAYS.toMillis(30), TimeUnit.DAYS.toMillis(90)) : NEVER);
-      put(Event.VERIFY_BACKUP_KEY, new VerifyBackupKeyReminderSchedule());
+      put(Event.INACTIVE_PRIMARY, shouldShowInactivePrimaryMegaphone() ? RecurringSchedule.every(TimeUnit.DAYS.toMillis(7)) : NEVER);
     }};
   }
 
   private static boolean shouldShowLinkedDeviceInactiveMegaphone() {
+    if (SignalStore.account().isLinkedDevice()) {
+      return false;
+    }
+
     LeastActiveLinkedDevice device = SignalStore.misc().getLeastActiveLinkedDevice();
     if (device == null) {
       return false;
@@ -176,10 +193,20 @@ public final class Megaphones {
         return buildPnpLaunchMegaphone();
       case NEW_LINKED_DEVICE:
         return buildNewLinkedDeviceMegaphone(context);
-      case TURN_ON_SIGNAL_BACKUPS:
-        return buildTurnOnSignalBackupsMegaphone();
+      case BACKUPS_GENERIC_UPSELL:
+        return buildBackupGenericUpsellMegaphone();
+      case BACKUP_MESSAGE_COUNT_UPSELL:
+        return buildBackupMessageCountUpsellMegaphone();
+      case BACKUP_MEDIA_SIZE_UPSELL:
+        return buildBackupMediaSizeUpsellMegaphone();
+      case BACKUP_LOW_STORAGE_UPSELL:
+        return buildBackupLowStorageUpsellMegaphone();
       case VERIFY_BACKUP_KEY:
         return buildVerifyBackupKeyMegaphone();
+      case USE_NEW_ON_DEVICE_BACKUPS:
+        return buildUseNewOnDeviceBackupsMegaphone();
+      case INACTIVE_PRIMARY:
+        return buildInactivePrimaryMegaphone();
       default:
         throw new IllegalArgumentException("Event not handled!");
     }
@@ -447,19 +474,20 @@ public final class Megaphones {
         .build();
   }
 
-  public static @NonNull Megaphone buildTurnOnSignalBackupsMegaphone() {
-    return new Megaphone.Builder(Event.TURN_ON_SIGNAL_BACKUPS, Megaphone.Style.BASIC)
+  public static @NonNull Megaphone buildBackupGenericUpsellMegaphone() {
+    return new Megaphone.Builder(Event.BACKUPS_GENERIC_UPSELL, Megaphone.Style.BASIC)
         .setImage(R.drawable.backups_megaphone_image)
         .setTitle(R.string.TurnOnSignalBackups__title)
         .setBody(R.string.TurnOnSignalBackups__body)
         .setActionButton(R.string.TurnOnSignalBackups__turn_on, (megaphone, controller) -> {
-          Intent intent = AppSettingsActivity.remoteBackups(controller.getMegaphoneActivity());
+          Intent intent = AppSettingsActivity.backupsSettings(controller.getMegaphoneActivity(), true);
 
           controller.onMegaphoneNavigationRequested(intent);
-          controller.onMegaphoneSnooze(Event.TURN_ON_SIGNAL_BACKUPS);
+          controller.onMegaphoneSnooze(Event.BACKUPS_GENERIC_UPSELL);
         })
         .setSecondaryButton(R.string.TurnOnSignalBackups__not_now, (megaphone, controller) -> {
-          controller.onMegaphoneSnooze(Event.TURN_ON_SIGNAL_BACKUPS);
+          controller.onMegaphoneToastRequested(controller.getMegaphoneActivity().getString(R.string.TurnOnSignalBackups__toast_not_now));
+          controller.onMegaphoneSnooze(Event.BACKUPS_GENERIC_UPSELL);
         })
         .build();
   }
@@ -486,12 +514,46 @@ public final class Megaphones {
     return builder.build();
   }
 
+  public static @NonNull Megaphone buildUseNewOnDeviceBackupsMegaphone() {
+    return new Megaphone.Builder(Event.USE_NEW_ON_DEVICE_BACKUPS, Megaphone.Style.BASIC)
+        .setImage(R.drawable.backups_megaphone_image)
+        .setTitle(R.string.UseNewOnDeviceBackups__title)
+        .setBody(R.string.UseNewOnDeviceBackups__body)
+        .setActionButton(R.string.UseNewOnDeviceBackups__upgrade, (megaphone, controller) -> {
+          Intent intent = AppSettingsActivity.upgradeLocalBackups(controller.getMegaphoneActivity());
+
+          controller.onMegaphoneNavigationRequested(intent);
+          controller.onMegaphoneSnooze(Event.USE_NEW_ON_DEVICE_BACKUPS);
+        })
+        .setSecondaryButton(R.string.UseNewOnDeviceBackups__not_now, (megaphone, controller) -> {
+          controller.onMegaphoneSnooze(Event.USE_NEW_ON_DEVICE_BACKUPS);
+        })
+        .build();
+  }
+
+  private static @NonNull Megaphone buildInactivePrimaryMegaphone() {
+    return new Megaphone.Builder(Event.INACTIVE_PRIMARY, Megaphone.Style.BASIC)
+        .setImage(R.drawable.megaphone_inactive_primary)
+        .setTitle(R.string.InactivePrimary__title)
+        .setBody(R.string.InactivePrimary__body)
+        .setActionButton(R.string.InactivePrimary__got_it, (megaphone, controller) -> {
+          controller.onMegaphoneSnooze(Event.INACTIVE_PRIMARY);
+        })
+        .setSecondaryButton(R.string.InactivePrimary__learn_more, ((megaphone, controller) -> {
+          CommunicationActions.openBrowserLink(
+              controller.getMegaphoneActivity(),
+              controller.getMegaphoneActivity().getString(R.string.inactive_primary_support)
+          );
+        }))
+        .build();
+  }
+
   private static boolean shouldShowOnboardingMegaphone(@NonNull Context context) {
-    return SignalStore.onboarding().hasOnboarding(context);
+    return SignalStore.account().isPrimaryDevice() && SignalStore.onboarding().hasOnboarding(context);
   }
 
   private static boolean shouldShowNewLinkedDeviceMegaphone() {
-    return SignalStore.misc().getNewLinkedDeviceId() > 0 && !NotificationChannels.getInstance().areNotificationsEnabled();
+    return SignalStore.account().isPrimaryDevice() && SignalStore.misc().getNewLinkedDeviceId() > 0 && !NotificationChannels.getInstance().areNotificationsEnabled();
   }
 
   private static boolean shouldShowTurnOffCircumventionMegaphone() {
@@ -538,11 +600,12 @@ public final class Megaphones {
    */
   private static boolean shouldShowSetUpYourUsernameMegaphone(@NonNull Map<Event, MegaphoneRecord> records) {
     boolean                        hasUsername                    = SignalStore.account().isRegistered() && SignalStore.account().getUsername() != null;
-    boolean                        hasCompleted                   = MapUtil.mapOrDefault(records, Event.SET_UP_YOUR_USERNAME, MegaphoneRecord::isFinished, false);
+    boolean                        hasCompleted                   = MapUtil.mapOrDefault(records, Event.SET_UP_YOUR_USERNAME, MegaphoneRecord::getFinished, false);
     long                           phoneNumberDiscoveryDisabledAt = SignalStore.phoneNumberPrivacy().getPhoneNumberDiscoverabilityModeTimestamp();
     PhoneNumberDiscoverabilityMode listingMode                    = SignalStore.phoneNumberPrivacy().getPhoneNumberDiscoverabilityMode();
 
-    return !hasUsername &&
+    return SignalStore.account().isPrimaryDevice() &&
+           !hasUsername &&
            listingMode == PhoneNumberDiscoverabilityMode.NOT_DISCOVERABLE &&
            !hasCompleted &&
            phoneNumberDiscoveryDisabledAt > 0 &&
@@ -550,11 +613,15 @@ public final class Megaphones {
   }
 
   private static boolean shouldShowPnpLaunchMegaphone() {
-    return TextUtils.isEmpty(SignalStore.account().getUsername()) && !SignalStore.uiHints().hasCompletedUsernameOnboarding();
+    return SignalStore.account().isPrimaryDevice() && TextUtils.isEmpty(SignalStore.account().getUsername()) && !SignalStore.uiHints().hasCompletedUsernameOnboarding();
   }
 
-  private static boolean shouldShowTurnOnBackupsMegaphone(@NonNull Context context) {
-    if (!Environment.IS_STAGING) {
+  private static boolean shouldShowInactivePrimaryMegaphone() {
+    return SignalStore.account().isLinkedDevice() && SignalStore.account().hasInactivePrimaryDeviceAlert();
+  }
+
+  private static boolean shouldShowGenericBackupsMegaphone(@NonNull Context context) {
+    if (!RemoteConfig.backupsMegaphone()) {
       return false;
     }
 
@@ -562,11 +629,15 @@ public final class Megaphones {
       return false;
     }
 
-    if (!SignalStore.account().isRegistered() || TextSecurePreferences.isUnauthorizedReceived(context)) {
+    if (!SignalStore.account().isRegistered() || TextSecurePreferences.isUnauthorizedReceived(context) || SignalStore.account().isLinkedDevice()) {
       return false;
     }
 
     return VersionTracker.getDaysSinceFirstInstalled(context) > 7;
+  }
+
+  private static boolean shouldShowUseNewOnDeviceBackupsMegaphone() {
+    return Environment.Backups.isNewFormatSupportedForLocalBackup() && SignalStore.settings().isBackupEnabled() && (RemoteConfig.upgradeBackupsMegaphone() || RemoteConfig.internalUser());
   }
 
   private static boolean shouldShowGrantFullScreenIntentPermission(@NonNull Context context) {
@@ -580,7 +651,8 @@ public final class Megaphones {
   }
 
   private static boolean shouldShowBackupSchedulePermissionMegaphone(@NonNull Context context) {
-    return Build.VERSION.SDK_INT >= 31 && SignalStore.settings().isBackupEnabled() && !ServiceUtil.getAlarmManager(context).canScheduleExactAlarms();
+    boolean backupsEnabled = SignalStore.settings().isBackupEnabled() || SignalStore.backup().getAreBackupsEnabled();
+    return SignalStore.account().isPrimaryDevice() && Build.VERSION.SDK_INT >= 31 && backupsEnabled && !ServiceUtil.getAlarmManager(context).canScheduleExactAlarms();
   }
 
   /**
@@ -600,6 +672,92 @@ public final class Megaphones {
     return System.currentTimeMillis() - lastSeenDonatePrompt;
   }
 
+  private static boolean shouldShowBackupMessageCountUpsell(@NonNull Context context) {
+    if (!SignalStore.account().isRegistered() || TextSecurePreferences.isUnauthorizedReceived(context) || SignalStore.account().isLinkedDevice()) {
+      return false;
+    }
+
+    if (SignalStore.backup().getLatestBackupTier() != null) {
+      return false;
+    }
+
+    return SignalDatabase.messages().getApproximateTotalMessageCount() > 1000;
+  }
+
+  private static boolean shouldShowBackupMediaSizeUpsell() {
+    if (!SignalStore.account().isRegistered() || SignalStore.account().isLinkedDevice() || !Environment.Backups.supportsGooglePlayBilling()) {
+      return false;
+    }
+
+    if (SignalStore.backup().getLatestBackupTier() != MessageBackupTier.FREE) {
+      return false;
+    }
+
+    return SignalDatabase.attachments().getApproximateTotalMediaSize() > ByteUnit.GIGABYTES.toBytes(1);
+  }
+
+  private static boolean shouldShowBackupLowStorageUpsell(@NonNull Context context) {
+    if (!SignalStore.account().isRegistered() || TextSecurePreferences.isUnauthorizedReceived(context) || SignalStore.account().isLinkedDevice() || !Environment.Backups.supportsGooglePlayBilling()) {
+      return false;
+    }
+
+    if (SignalStore.backup().getLatestBackupTier() == MessageBackupTier.PAID) {
+      return false;
+    }
+
+    long available = DiskUtil.getAvailableSpace(context).getBytes();
+    long total     = DiskUtil.getTotalDiskSize(context).getBytes();
+
+    return total > 0 && ((double) available / total) < 0.10;
+  }
+
+  private static @NonNull Megaphone buildBackupMessageCountUpsellMegaphone() {
+    return new Megaphone.Builder(Event.BACKUP_MESSAGE_COUNT_UPSELL, Megaphone.Style.BASIC)
+        .setImage(R.drawable.megaphone_backup_message_count)
+        .setTitle(R.string.BackupMessagesUpsell__title)
+        .setBody(R.string.BackupMessagesUpsell__body)
+        .setActionButton(R.string.BackupMessagesUpsell__turn_on, (megaphone, controller) -> {
+          Intent intent = AppSettingsActivity.backupsSettings(controller.getMegaphoneActivity(), true);
+          controller.onMegaphoneNavigationRequested(intent);
+          controller.onMegaphoneSnooze(Event.BACKUP_MESSAGE_COUNT_UPSELL);
+        })
+        .setSecondaryButton(R.string.BackupMessagesUpsell__not_now, (megaphone, controller) -> {
+          controller.onMegaphoneSnooze(Event.BACKUP_MESSAGE_COUNT_UPSELL);
+        })
+        .build();
+  }
+
+  private static @NonNull Megaphone buildBackupMediaSizeUpsellMegaphone() {
+    return new Megaphone.Builder(Event.BACKUP_MEDIA_SIZE_UPSELL, Megaphone.Style.BASIC)
+        .setImage(R.drawable.megaphone_backup_media_size)
+        .setTitle(R.string.BackupMediaUpsell__title)
+        .setBody(R.string.BackupMediaUpsell__body)
+        .setActionButton(R.string.BackupMediaUpsell__upgrade, (megaphone, controller) -> {
+          controller.onMegaphoneDialogFragmentRequested(BackupUpsellBottomSheet.create(false));
+          controller.onMegaphoneSnooze(Event.BACKUP_MEDIA_SIZE_UPSELL);
+        })
+        .setSecondaryButton(R.string.BackupMediaUpsell__not_now, (megaphone, controller) -> {
+          controller.onMegaphoneSnooze(Event.BACKUP_MEDIA_SIZE_UPSELL);
+        })
+        .build();
+  }
+
+  private static @NonNull Megaphone buildBackupLowStorageUpsellMegaphone() {
+    boolean hasBackups = SignalStore.backup().getLatestBackupTier() != null;
+
+    return new Megaphone.Builder(Event.BACKUP_LOW_STORAGE_UPSELL, Megaphone.Style.BASIC)
+        .setImage(R.drawable.megaphone_backup_storage_low)
+        .setTitle(R.string.BackupStorageUpsell__title)
+        .setBody(R.string.BackupStorageUpsell__body)
+        .setActionButton(hasBackups ? R.string.BackupStorageUpsell__upgrade : R.string.BackupStorageUpsell__turn_on, (megaphone, controller) -> {
+          controller.onMegaphoneDialogFragmentRequested(BackupUpsellBottomSheet.create(true));
+          controller.onMegaphoneSnooze(Event.BACKUP_LOW_STORAGE_UPSELL);
+        })
+        .setSecondaryButton(R.string.BackupStorageUpsell__not_now, (megaphone, controller) -> {
+          controller.onMegaphoneSnooze(Event.BACKUP_LOW_STORAGE_UPSELL);
+        })
+        .build();
+  }
 
   public enum Event {
     PINS_FOR_ALL("pins_for_all"),
@@ -618,8 +776,13 @@ public final class Megaphones {
     PNP_LAUNCH("pnp_launch"),
     GRANT_FULL_SCREEN_INTENT("grant_full_screen_intent"),
     NEW_LINKED_DEVICE("new_linked_device"),
-    TURN_ON_SIGNAL_BACKUPS("turn_on_signal_backups"),
-    VERIFY_BACKUP_KEY("verify_backup_key");
+    BACKUPS_GENERIC_UPSELL("turn_on_signal_backups"),
+    BACKUP_MESSAGE_COUNT_UPSELL("backup_messages_upsell"),
+    BACKUP_MEDIA_SIZE_UPSELL("backup_media_upsell"),
+    BACKUP_LOW_STORAGE_UPSELL("backup_storage_upsell"),
+    VERIFY_BACKUP_KEY("verify_backup_key"),
+    USE_NEW_ON_DEVICE_BACKUPS("use_new_on_device_backups"),
+    INACTIVE_PRIMARY("inactive_primary");
 
     private final String key;
 
