@@ -9,8 +9,6 @@ import android.hardware.camera2.CameraMetadata;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
-import com.annimon.stream.Stream;
-
 import org.signal.core.util.logging.Log;
 import org.signal.ringrtc.CameraControl;
 import org.thoughtcrime.securesms.components.webrtc.EglBaseWrapper;
@@ -22,9 +20,12 @@ import org.webrtc.CameraVideoCapturer;
 import org.webrtc.CapturerObserver;
 import org.webrtc.SurfaceTextureHelper;
 import org.webrtc.VideoFrame;
+import org.webrtc.VideoSink;
 
 import java.util.LinkedList;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.thoughtcrime.securesms.ringrtc.CameraState.Direction.BACK;
 import static org.thoughtcrime.securesms.ringrtc.CameraState.Direction.FRONT;
@@ -38,6 +39,10 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
 
   private static final String TAG = Log.tag(Camera.class);
 
+  private static final int CAPTURE_WIDTH  = 1280;
+  private static final int CAPTURE_HEIGHT = 720;
+  private static final int CAPTURE_FPS    = 30;
+
   @NonNull  private final Context                   context;
   @Nullable private final CameraVideoCapturer       capturer;
   @Nullable private       CameraEventListener       cameraEventListener;
@@ -46,7 +51,10 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
   @NonNull  private       CameraState.Direction     activeDirection;
             private       boolean                   enabled;
             private       boolean                   isInitialized;
+            private       boolean                   capturing;
+            private       boolean                   paused;
             private       int                       orientation;
+  @Nullable private volatile VideoSink              vanitySink;
 
   public Camera(@NonNull Context context,
                 @NonNull CameraEventListener cameraEventListener,
@@ -85,6 +93,7 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
                             new CameraCapturerWrapper(observer));
         capturer.setOrientation(orientation);
         isInitialized = true;
+        setEnabled(enabled);
       });
     }
   }
@@ -105,10 +114,10 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
 
   @Override
   public void setOrientation(@Nullable Integer orientation) {
-    this.orientation = orientation;
+    this.orientation = orientation != null ? orientation : 0;
 
     if (isInitialized && capturer != null) {
-      capturer.setOrientation(orientation);
+      capturer.setOrientation(this.orientation);
     }
   }
 
@@ -117,32 +126,67 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
     Log.i(TAG, "setEnabled(): " + enabled);
 
     this.enabled = enabled;
+    this.paused  = false;
 
-    if (capturer == null) {
+    if (capturer == null || !isInitialized) {
       return;
     }
 
-    try {
-      if (enabled) {
-        Log.i(TAG, "setEnabled(): starting capture");
-        capturer.startCapture(1280, 720, 30);
-      } else {
-        Log.i(TAG, "setEnabled(): stopping capture");
-        capturer.stopCapture();
-      }
-    } catch (InterruptedException e) {
-      Log.w(TAG, "Got interrupted while trying to stop video capture", e);
+    if (enabled) {
+      startCapture();
+    } else {
+      stopCapture();
     }
+  }
+
+  public void pauseCapture() {
+    if (capturer != null && capturing) {
+      paused = true;
+      stopCapture();
+    }
+  }
+
+  public void resumeCapture() {
+    paused = false;
+    if (capturer != null && isInitialized && enabled && !capturing) {
+      startCapture();
+    }
+  }
+
+  /** Whether the camera should be capturing based on user state, regardless of the current pause status. */
+  public boolean shouldBeCapturing() {
+    return capturer != null && isInitialized && enabled;
+  }
+
+  public boolean isCapturing() {
+    return capturing;
   }
 
   public void setCameraEventListener(@Nullable CameraEventListener cameraEventListener) {
     this.cameraEventListener = cameraEventListener;
   }
 
+  /**
+   * Set a vanity sink that receives camera frames directly from the capturer,
+   * bypassing the WebRTC VideoTrack pipeline. This allows local preview to work
+   * even when the video track is disabled (e.g., during incoming call ringing).
+   */
+  public void setVanitySink(@Nullable VideoSink vanitySink) {
+    this.vanitySink = vanitySink;
+  }
+
+  void deliverToVanitySink(@NonNull VideoFrame videoFrame) {
+    VideoSink sink = vanitySink;
+    if (sink != null) {
+      sink.onFrame(videoFrame);
+    }
+  }
+
   public void dispose() {
     if (capturer != null) {
       capturer.dispose();
       isInitialized = false;
+      capturing     = false;
     }
   }
 
@@ -158,12 +202,28 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
     return new CameraState(getActiveDirection(), getCount());
   }
 
-  @Nullable CameraVideoCapturer getCapturer() {
-    return capturer;
-  }
-
   public boolean isInitialized() {
     return isInitialized;
+  }
+
+  private void startCapture() {
+    Log.i(TAG, "startCapture()");
+    try {
+      capturer.startCapture(CAPTURE_WIDTH, CAPTURE_HEIGHT, CAPTURE_FPS);
+      capturing = true;
+    } catch (Exception e) {
+      Log.w(TAG, "Error starting capture", e);
+    }
+  }
+
+  private void stopCapture() {
+    Log.i(TAG, "stopCapture()");
+    try {
+      capturer.stopCapture();
+    } catch (InterruptedException e) {
+      Log.w(TAG, "Interrupted stopping capture", e);
+    }
+    capturing = false;
   }
 
   private @Nullable CameraVideoCapturer createVideoCapturer(@NonNull CameraEnumerator enumerator,
@@ -264,10 +324,10 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
 
         if (cameraManager != null) {
           List<String> devices = Stream.of(cameraManager.getCameraIdList())
-                                       .filterNot(id -> isMonochrome(id, cameraManager))
-                                       .toList();
+                                       .filter(id -> !isMonochrome(id, cameraManager))
+                                       .collect(Collectors.toList());
 
-          String frontCamera = Stream.of(devices)
+          String frontCamera = devices.stream()
                                      .filter(id -> isLensFacing(id, cameraManager, CameraMetadata.LENS_FACING_FRONT))
                                      .findFirst()
                                      .orElse(null);
@@ -276,7 +336,7 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
             cameraList.add(frontCamera);
           }
 
-          String backCamera = Stream.of(devices)
+          String backCamera = devices.stream()
                                     .filter(id -> isLensFacing(id, cameraManager, CameraMetadata.LENS_FACING_BACK))
                                     .findFirst()
                                     .orElse(null);
@@ -320,6 +380,9 @@ public class Camera implements CameraControl, CameraVideoCapturer.CameraSwitchHa
 
     @Override
     public void onCapturerStopped() {
+      if (paused) {
+        return;
+      }
       observer.onCapturerStopped();
       if (cameraEventListener != null) cameraEventListener.onCameraStopped();
     }
