@@ -1,12 +1,11 @@
 package org.thoughtcrime.securesms.service.webrtc;
 
+import android.content.Intent;
 import android.os.ResultReceiver;
 import android.util.LongSparseArray;
 
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
-
-import com.annimon.stream.Stream;
 
 import org.signal.core.util.logging.Log;
 import org.signal.ringrtc.CallException;
@@ -19,12 +18,14 @@ import org.thoughtcrime.securesms.events.GroupCallSpeechEvent;
 import org.thoughtcrime.securesms.events.WebRtcViewModel;
 import org.thoughtcrime.securesms.keyvalue.SignalStore;
 import org.thoughtcrime.securesms.recipients.Recipient;
-import org.thoughtcrime.securesms.ringrtc.Camera;
+import org.thoughtcrime.securesms.recipients.RecipientId;
+import org.thoughtcrime.securesms.ringrtc.OutgoingVideoSourceRouter;
 import org.thoughtcrime.securesms.ringrtc.RemotePeer;
-import org.thoughtcrime.securesms.service.webrtc.state.CallInfoState;
+import org.thoughtcrime.securesms.service.webrtc.state.LocalDeviceState;
 import org.thoughtcrime.securesms.service.webrtc.state.WebRtcEphemeralState;
 import org.thoughtcrime.securesms.service.webrtc.state.WebRtcServiceState;
 import org.thoughtcrime.securesms.service.webrtc.state.WebRtcServiceStateBuilder;
+import org.thoughtcrime.securesms.webrtc.CallNotificationBuilder;
 
 import java.util.ArrayList;
 import java.util.Collection;
@@ -32,6 +33,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 /**
  * Process actions for when the call has at least once been connected and joined.
@@ -88,21 +90,108 @@ public class GroupConnectedActionProcessor extends GroupActionProcessor {
   protected @NonNull WebRtcServiceState handleSetEnableVideo(@NonNull WebRtcServiceState currentState, boolean enable) {
     Log.i(tag, "handleSetEnableVideo():");
 
-    GroupCall groupCall = currentState.getCallInfoState().requireGroupCall();
-    Camera    camera    = currentState.getVideoState().requireCamera();
+    GroupCall                 groupCall = currentState.getCallInfoState().requireGroupCall();
+    OutgoingVideoSourceRouter router    = currentState.getVideoState().requireRouter();
 
     try {
-      groupCall.setOutgoingVideoMuted(!enable);
+      groupCall.setOutgoingVideoMuted(!enable, false);
     } catch (CallException e) {
       return groupCallFailure(currentState, "Unable set video muted", e);
     }
-    camera.setEnabled(enable);
+    router.setEnabled(enable);
 
     currentState = currentState.builder()
                                .changeLocalDeviceState()
-                               .cameraState(camera.getCameraState())
+                               .cameraState(router.getCameraState())
                                .build();
 
+    boolean localVideoEnabled  = currentState.getLocalDeviceState().getCameraState().isEnabled() || currentState.getLocalDeviceState().isScreenSharing();
+    boolean remoteVideoEnabled = currentState.getCallInfoState().getRemoteCallParticipantsMap().values().stream().anyMatch(CallParticipant::isVideoEnabled);
+    webRtcInteractor.updatePhoneState(WebRtcUtil.getInCallPhoneState(context, localVideoEnabled, remoteVideoEnabled));
+
+    WebRtcUtil.enableSpeakerPhoneIfNeeded(webRtcInteractor, currentState);
+
+    return currentState;
+  }
+
+  @Override
+  protected @NonNull WebRtcServiceState handleSetLocalScreenShare(@NonNull WebRtcServiceState currentState, boolean enable, @Nullable Intent mediaProjectionData) {
+    Log.i(tag, "handleSetLocalScreenShare(): enable: " + enable);
+
+    GroupCall                 groupCall = currentState.getCallInfoState().requireGroupCall();
+    OutgoingVideoSourceRouter router    = currentState.getVideoState().requireRouter();
+
+    RecipientId recipientId = currentState.getCallInfoState().getCallRecipient().getId();
+
+    if (enable && mediaProjectionData != null) {
+      Log.i(tag, "Updating service for media projection, then can screen share");
+      ActiveCallManager.ActiveCallForegroundService.update(context, CallNotificationBuilder.TYPE_ESTABLISHED, recipientId, true, true);
+
+      return currentState.builder()
+                         .changeLocalDeviceState()
+                         .setMediaProjectionIntent(mediaProjectionData)
+                         .build();
+    } else {
+      router.stopScreenShare();
+
+      boolean cameraWasEnabled = currentState.getLocalDeviceState().getCameraState().isEnabled();
+      ActiveCallManager.ActiveCallForegroundService.update(context, CallNotificationBuilder.TYPE_ESTABLISHED, recipientId, true, false);
+
+      try {
+        groupCall.setPresenting(false);
+        groupCall.setOutgoingVideoMuted(!cameraWasEnabled, false);
+      } catch (CallException e) {
+        return groupCallFailure(currentState, "Unable to restore video mute after screen share", e);
+      }
+
+      currentState = currentState.builder()
+                                 .changeLocalDeviceState()
+                                 .isScreenSharing(false)
+                                 .setMediaProjectionIntent(null)
+                                 .build();
+
+      boolean remoteVideoEnabled = currentState.getCallInfoState().getRemoteCallParticipantsMap().values().stream().anyMatch(CallParticipant::isVideoEnabled);
+      webRtcInteractor.updatePhoneState(WebRtcUtil.getInCallPhoneState(context, cameraWasEnabled, remoteVideoEnabled));
+
+      return currentState;
+    }
+  }
+
+  @Override
+  protected @NonNull WebRtcServiceState handleScreenSharingServiceReady(@NonNull WebRtcServiceState currentState) {
+    Log.i(tag, "handleScreenSharingServiceReady()");
+
+    LocalDeviceState localDeviceState      = currentState.getLocalDeviceState();
+    Intent           mediaProjectionIntent = localDeviceState.getMediaProjectionIntent();
+
+    if (localDeviceState.isScreenSharing()) {
+      Log.w(tag, "handleScreenSharingServiceReady(): already screensharing!");
+      return currentState;
+    }
+
+    if (mediaProjectionIntent == null) {
+      Log.w(tag, "handleScreenSharingServiceReady(): Media intent is null, bailing");
+      return currentState;
+    }
+
+    GroupCall                 groupCall = currentState.getCallInfoState().requireGroupCall();
+    OutgoingVideoSourceRouter router    = currentState.getVideoState().requireRouter();
+
+    try {
+      groupCall.setOutgoingVideoMuted(false, true);
+      groupCall.setPresenting(true);
+    } catch (CallException e) {
+      return groupCallFailure(currentState, "Unable to unmute video for screen share", e);
+    }
+    router.startScreenShare(mediaProjectionIntent);
+
+    currentState = currentState.builder()
+                               .changeLocalDeviceState()
+                               .isScreenSharing(true)
+                               .build();
+
+    boolean remoteVideoEnabled = currentState.getCallInfoState().getRemoteCallParticipantsMap().values().stream().anyMatch(CallParticipant::isVideoEnabled);
+    webRtcInteractor.updatePhoneState(WebRtcUtil.getInCallPhoneState(context, true, remoteVideoEnabled));
     WebRtcUtil.enableSpeakerPhoneIfNeeded(webRtcInteractor, currentState);
 
     return currentState;
@@ -135,7 +224,7 @@ public class GroupConnectedActionProcessor extends GroupActionProcessor {
     }
 
     for (Map.Entry<CallParticipantId, CallParticipant> entry : participants.entrySet()) {
-      if (entry.getKey().getDemuxId() == sourceDemuxId) {
+      if (entry.getKey().demuxId == sourceDemuxId) {
         try {
           groupCall.setOutgoingAudioMutedRemotely(sourceDemuxId);
         } catch (CallException e) {
@@ -161,7 +250,7 @@ public class GroupConnectedActionProcessor extends GroupActionProcessor {
       source = Recipient.self();
     } else {
       for (Map.Entry<CallParticipantId, CallParticipant> entry : participants.entrySet()) {
-        if (entry.getKey().getDemuxId() == sourceDemuxId) {
+        if (entry.getKey().demuxId == sourceDemuxId) {
           source = entry.getValue().getRecipient();
         }
       }
@@ -172,7 +261,7 @@ public class GroupConnectedActionProcessor extends GroupActionProcessor {
     }
 
     for (Map.Entry<CallParticipantId, CallParticipant> entry : participants.entrySet()) {
-      if (entry.getKey().getDemuxId() == targetDemuxId) {
+      if (entry.getKey().demuxId == targetDemuxId) {
         WebRtcServiceStateBuilder.CallInfoStateBuilder builder = currentState.builder().changeCallInfoState().putParticipant(entry.getKey(), entry.getValue().withRemotelyMutedBy(source));
         return builder.build();
       }
@@ -193,7 +282,7 @@ public class GroupConnectedActionProcessor extends GroupActionProcessor {
       CallParticipantId callParticipantId = participant.getCallParticipantId();
 
       if (remoteDeviceStates != null) {
-        GroupCall.RemoteDeviceState state = remoteDeviceStates.get(callParticipantId.getDemuxId());
+        GroupCall.RemoteDeviceState state = remoteDeviceStates.get(callParticipantId.demuxId);
         if (state != null) {
           remoteAudioLevels.put(callParticipantId, CallParticipant.AudioLevel.fromRawAudioLevel(state.getAudioLevel()));
         }
@@ -249,7 +338,9 @@ public class GroupConnectedActionProcessor extends GroupActionProcessor {
     String eraId = WebRtcUtil.getGroupCallEraId(groupCall);
     webRtcInteractor.sendGroupCallMessage(currentState.getCallInfoState().getCallRecipient(), eraId, null, false, false);
 
-    List<UUID> members = Stream.of(currentState.getCallInfoState().getRemoteCallParticipants()).map(p -> p.getRecipient().requireServiceId().getRawUuid()).toList();
+    List<UUID> members = currentState.getCallInfoState().getRemoteCallParticipants().stream()
+                                     .filter(p -> p.getRecipient().getHasServiceId())
+                                     .map(p -> p.getRecipient().requireServiceId().getRawUuid()).collect(Collectors.toList());
     webRtcInteractor.updateGroupCallUpdateMessage(currentState.getCallInfoState().getCallRecipient().getId(), eraId, members, false);
 
     currentState = currentState.builder()
@@ -308,7 +399,7 @@ public class GroupConnectedActionProcessor extends GroupActionProcessor {
 
   @Nullable
   private GroupCallReactionEvent createGroupCallReaction(Collection<CallParticipant> participants, final GroupCall.Reaction reaction) {
-    CallParticipant participant = participants.stream().filter(it -> it.getCallParticipantId().getDemuxId() == reaction.demuxId).findFirst().orElse(null);
+    CallParticipant participant = participants.stream().filter(it -> it.getCallParticipantId().demuxId == reaction.demuxId).findFirst().orElse(null);
     if (participant == null) {
       Log.v(TAG, "Could not find CallParticipantId in list of call participants based on demuxId for reaction.");
       return null;
@@ -329,7 +420,7 @@ public class GroupConnectedActionProcessor extends GroupActionProcessor {
     List<CallParticipant> participants = currentState.getCallInfoState().getRemoteCallParticipants();
 
     for (CallParticipant updatedParticipant : participants) {
-      int raisedHandIndex = raisedHands.indexOf(updatedParticipant.getCallParticipantId().getDemuxId());
+      int raisedHandIndex = raisedHands.indexOf(updatedParticipant.getCallParticipantId().demuxId);
       boolean wasHandAlreadyRaised  = updatedParticipant.isHandRaised();
 
       if (wasHandAlreadyRaised) {
@@ -360,8 +451,25 @@ public class GroupConnectedActionProcessor extends GroupActionProcessor {
   }
 
   @Override
+  protected @NonNull WebRtcServiceState handleSendRemoteMuteRequest(@NonNull WebRtcServiceState currentState, @NonNull CallParticipant participant) {
+    Log.i(tag, "handleSendRemoteMuteRequest():");
+
+    GroupCall groupCall = currentState.getCallInfoState().requireGroupCall();
+    try {
+      groupCall.sendRemoteMuteRequest(participant.getCallParticipantId().demuxId);
+    } catch (CallException e) {
+      Log.w(tag, "Failed to send remote mute request.", e);
+    }
+    return currentState;
+  }
+
+  @Override
   protected @NonNull WebRtcServiceState handleGroupCallSpeechEvent(@NonNull WebRtcServiceState currentState, @NonNull GroupCall.SpeechEvent speechEvent) {
     Log.i(tag, "handleGroupCallSpeechEvent :: " + speechEvent.name());
+
+    if (!SignalStore.labs().getAutoLowerHand()) {
+      return currentState;
+    }
 
     return currentState.builder()
                        .changeCallInfoState()
